Atividade formativa - docker

--- a/Faculdade - SENAI/3º Semestre/CONUV/Docker/project_docker/app/templates/index.html
+++ b/Faculdade - SENAI/3º Semestre/CONUV/Docker/project_docker/app/templates/index.html
@@ -20,6 +20,14 @@
         </form>
     </div>
 
+    <table>
+        <tr>
+            <th>teste</th>
+            <th>teste2</th>
+        </tr>
+        
+    </table>
+
     <script src="{{ url_for('static', filename='script.js')}}"></script>
 </body>
 </html>
